<resources>
    <string name="app_name">Asuntos Genero</string>
    <string name="anio">Año</string>
    <string name="comuna">Comuna</string>
    <string name="age">Edad</string>
    <string name="socialSecurity">Seguridad Social</string>
    <string name="month">Mes</string>
    <string name="municipality">Municipio</string>
    <string name="relationAgressor">Relacion Agresor</string>
    <string name="typeViolence">Tipo Violencia</string>
    <string name="identitySexual">Identidad Sexual</string>
    <string name="texto_autor">Autora: Ana Gabriela Muñoz Cabrera</string>
    <string name="boton_volver">Volver</string>
    <string name="sscreen">Informacion acerca de la violencia de genero</string>
    <string name="emp">Empezar</string>
    <string name="bien">Bienvenidos</string>
    <string name="msg">En esta aplicacion se observa algunos datos, acerca de la violacion de genero experimentado por algunas personas</string>
    <string name="in">Para continuar da clic en el boton empezar</string>
    <string name="boton_acerca">Acerca De</string>
</resources>
