<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/violencia3"
    tools:context="com.example.sistemas.asuntosgenero.Bienvenida">


    <Button
        android:id="@+id/empezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inicio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@android:color/holo_green_dark"
        android:fontFamily="cursive"
        android:onClick="asuntosGenero"
        android:text="@string/emp" />
    <Button
        android:id="@+id/acercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@android:color/holo_green_dark"
        android:fontFamily="cursive"
        android:onClick="acercade"
        android:text="@string/boton_acerca"
        android:layout_below="@+id/empezar"
        android:layout_alignLeft="@+id/empezar"
        android:layout_alignStart="@+id/empezar" />

    <TextView
        android:id="@+id/inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mensaje"
        android:layout_marginTop="36dp"
        android:fontFamily="casual"
        android:text="@string/in"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bienvenida"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/msg"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:fontFamily="casual"
        android:text="@string/bien"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

</RelativeLayout>
